[metadata]
name = ModernEnigma
version = 0.0.2
author = K. Ferry
author_email = kevinferry@gmail.com
description = A modular Enigma Machine Emulator
keywords = "Enigma", "Emulator"
license = BSD-3-Clause
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    requests
    importlib-metadata; python_version<"3.8"

[options.package_data]
* = *.txt, *.rst,*.md
hello = *.msg


[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    my_package.tests*